Avancei um pouco no desafio!
Consegui colocar o efeito paralax sozinho! Precisei só lembrar do atributo necessário pra fixar a imagem.

Ajustei também o tamanho das divs onde estão os textos e dei uma aumentada no padding dos parágrafos também.

Ainda estou con dificuldades para resolver questões de responsividade. Não consegui lembrar como ajustar as divs dos textos, nem do header e nem os textos em si, para se ajustarem ao tamanho da tela. Vou focar bastante nisso pra fixar bem o aprendizado e não passar sufoco no futuro.

De resto, ajustei a transparência das divs onde coloquei a imagem de fundo para o efeito paralax e não consegui lembrar como ajustar o efeito de box-shadow pra estilizar as divisões das divs e ficar parecido com o modelo.

No geral, estou bastante satisfeito com o resultado que atingi sozinho. Não imaginava que conseguiria.

--- a/Desafios/d012/projetocordel.html
+++ b/Desafios/d012/projetocordel.html
@@ -58,15 +58,33 @@
 
         section.transparente article {
             background-color: rgba(0, 0, 0, 0.37);
+            color: white;
         }
 
         article {
             border: 1px solid black;
             width: 30%;
+            font-size: 200%;
         }
 
         article p {
             padding:3px 3px 3px 30px;
+        }
+
+        #joaninha {
+            background-image: url(imagens/background001.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
+            background-attachment: fixed;
+        }        
+
+        #papel {
+            background-image: url(imagens/background002.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
+            background-attachment: fixed;
         }
 
         footer {
@@ -96,7 +114,7 @@
         </article>
     </section>
 
-    <section style="background-image: url();" class="transparente">
+    <section id="joaninha" class="transparente">
         <article>
             <p>Não é mais como era antes</p>
             <p>É tudo abreviado</p>
@@ -128,7 +146,7 @@
         </article>
     </section>
 
-    <section style="background-image: url();" class="transparente">
+    <section id="papel" class="transparente">
         <article>
             <p>Tenho saudade das cartas</p>
             <p>Escritas com a própria mão</p>
