--- a/Desafios/d012/projetocordel.html
+++ b/Desafios/d012/projetocordel.html
@@ -5,95 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Cordel</title>
+    <link rel="stylesheet" href="folhadeestilo.css">
     <style>
-        html {
-            margin-top: -22px;
-        }
 
-        body {
-            margin: 0px;
-            background-color: antiquewhite;     
-        }
-/**Não estou lembrando como fazer para**/
-        header {
-            
-            background-color: black;
-            padding: 110px;
-            box-shadow: darkgrey;
-            
-        }
-/** Ver como centralizar o texto para que fique no meio da div. Alem disso, fazer com que o título aumente e diminua conforme o tamanho da tela. **/
-        header h1 {
-            color: white;
-            text-align: center;
-        }
-/**Ver como alterar a cor do link bara branco e negrito e fazer com que fique sublinhado quando em contato com o ponteiro do mouse**/
-        header a {
-            text-decoration: white;
-        }
-
-        header p {
-            color: aliceblue;
-            text-align: center;
-            vertical-align: center;
-        }
-
-        section {
-            border: 1px solid black;
-            padding-top: 50px;
-            padding-bottom: 50px;
-        }
-
-        section.branco{
-            background-color: white;
-        }
-
-        section.branco article {
-            background-color: white;
-        }
-
-        section.transparente {
-            background-color: transparent;
-        }
-
-        section.transparente article {
-            background-color: rgba(0, 0, 0, 0.37);
-            color: white;
-        }
-
-        article {
-            border: 1px solid black;
-            width: 30%;
-            font-size: 200%;
-        }
-
-        article p {
-            padding:3px 3px 3px 30px;
-        }
-
-        #joaninha {
-            background-image: url(imagens/background001.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            height: 100vh;
-            background-attachment: fixed;
-        }        
-
-        #papel {
-            background-image: url(imagens/background002.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            height: 100vh;
-            background-attachment: fixed;
-        }
-
-        footer {
-            background-color: black;
-            color: white;
-            text-align: center;
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
     </style>
 </head>
 <body>
