--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -93,7 +93,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/tarenta"></a>Wallace Tarenta para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/tarenta">Wallace Tarenta</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
